--- a/aot_watch.html
+++ b/aot_watch.html
@@ -10,50 +10,53 @@
 </head>
 <body>
 
-<header>
-    <nav class="navbar navbar-expand-lg bg-body-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="withlogout.html">WaifuSpot</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav" id="menu">
-                    <li class="nav-item">
-                        <a id="menu-item-1" class="nav-link" href="tierlist.html" tabindex="0">Popularity list</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-item-2" class="nav-link" href="manga.html" tabindex="0">Manga</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-item-3" class="nav-link" href="forum.html" tabindex="0">Forum</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-item-4" class="nav-link" href="news.html" tabindex="0">News</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-item-5" class="nav-link" href="aboutus.html" tabindex="0">About us</a>
-                    </li>
-                </ul>
+    <header class="theme-sensitive">
+        <nav class="navbar navbar-expand-lg bg-body-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand theme-sensitive" href="withlogout.html">WaifuSpot</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav theme-sensitive" id="menu">
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-1" class="nav-link theme-sensitive" href="tierlist.html" tabindex="0">Popularity list</a>
+                        </li>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-2" class="nav-link theme-sensitive" href="manga.html" tabindex="0">Manga</a>
+                        </li>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-3" class="nav-link theme-sensitive" href="forum.html" tabindex="0">Forum</a>
+                        </li>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-4" class="nav-link theme-sensitive" href="news.html" tabindex="0">News</a>
+                        </li>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-5" class="nav-link theme-sensitive" href="aboutus.html" tabindex="0">About us</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+        <button class="btn btn-outline-light" id="toggleThemeButton">Theme switcher</button>
+        <div class="user-options">
+            <div id="auth-buttons">
+                <a href="signup.html" class="btn btn-outline-light" id="signUpButton">Sign Up</a>
+                <a href="signin.html" class="btn btn-outline-light" id="logInButton">Log In</a>
+                </div>
         </div>
-    </nav>
-    <button class="btn btn-outline-light" id="toggleThemeButton">Theme switcher</button>
-    <div class="user-options">
-        <div id="auth-buttons">
-            <a href="signup.html" class="btn btn-outline-light" id="signUpButton">Sign Up</a>
-            <a href="signin.html" class="btn btn-outline-light" id="logInButton">Log In</a>
+        <div id="personal-account-button" style="display: block;">
+            <a href="user.html" class="btn btn-outline-light" id="personalAccountButton">Personal Account</a>
+        </div>
+            <div id="logout-button" style="display: none;">
+                <a href="index.html" class="btn btn-outline-light" id="logOutButton">Log Out</a>
             </div>
-    </div>
-        <div id="logout-button" style="display: none;">
-            <a href="index.html" class="btn btn-outline-light" id="logOutButton">Log Out</a>
-        </div>
-    </div>
-</header>
+           
+    </header>
 
-<div class="container">
-    <h1>Attack on Titan / Shingeki no Kyojin</h1>
+<div class="container theme-sensitive">
+    <h1 class="theme-sensitive">Attack on Titan / Shingeki no Kyojin</h1>
     <h6><strong>Finished (all episodes)</strong></h6>
 
     <div class="content">
@@ -131,10 +134,10 @@
             that Eren vows to avenge the entire human race.
             <button id="ReadBtn">Fun fact</button>
         </p>
-        <div id="factContainer" style="display: none;">
-            <h2 id="factTitle">Random fact about Attack on Titan</h2>
+        <div id="factContainer" style="display: none;" class="theme-sensitive">
+            <h2 id="factTitle" class="theme-sensitive">Random fact about Attack on Titan</h2>
             <p id="randomFact"></p>
-            <button id="closeFact" style="cursor: pointer;">Close</button>
+            <button id="closeFact" style="cursor: pointer;" class="theme-sensitive">Close</button>
         </div>
     </div>
 
@@ -143,27 +146,27 @@
         Your browser does not support the video tag.
     </video>
 
-    <div class="comments-section">
+    <div class="comments-section theme-sensitive">
         <h3>Comments</h3>
-        <div class="comment">
-            <p><strong>Anna:</strong> "Attack on Titan" is one of the best animes I've ever seen! The story is so
+        <div class="comment theme-sensitive">
+            <p><strong class="theme-sensitive">Anna:</strong> "Attack on Titan" is one of the best animes I've ever seen! The story is so
                 gripping and emotional. Can't wait to watch it again!</p>
         </div>
-        <div class="comment">
-            <p><strong>John:</strong> I was blown away by the animation and the intense battles. Eren's transformation
+        <div class="comment theme-sensitive">
+            <p><strong class="theme-sensitive">John:</strong> I was blown away by the animation and the intense battles. Eren's transformation
                 is amazing. 10/10 from me!</p>
         </div>
         <form class="comment-form mt-4">
             <div class="mb-3">
                 <label for="commentInput" class="form-label">Leave a comment:</label>
-                <textarea class="form-control" id="commentInput" rows="3" placeholder="Your comment..."></textarea>
+                <textarea class="form-control theme-sensitive" id="commentInput" rows="3" placeholder="Your comment..."></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary theme-sensitive">Submit</button>
         </form>
     </div>
 </div>
 
-<footer>
+<footer class="theme-sensitive">
     <p><i>Astana IT University || SE-2329</i></p>
     <p>Sanzhar Berkamalov | Arsen Tinalin | Altair Aitymov</p>
 </footer>
