--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 </head>
 <body>
 
-<header>
+<header class="theme-sensitive">
     <nav class="navbar navbar-expand-lg bg-body-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="withlogout.html">WaifuSpot</a>
+            <a class="navbar-brand theme-sensitive" href="withlogout.html">WaifuSpot</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav" id="menu">
-                    <li class="nav-item">
-                        <a id="menu-item-1" class="nav-link" href="tierlist.html" tabindex="0">Popularity list</a>
+                <ul class="navbar-nav theme-sensitive" id="menu">
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-1" class="nav-link theme-sensitive" href="tierlist.html" tabindex="0">Popularity list</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="menu-item-2" class="nav-link" href="manga.html" tabindex="0">Manga</a>
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-2" class="nav-link theme-sensitive" href="manga.html" tabindex="0">Manga</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="menu-item-3" class="nav-link" href="forum.html" tabindex="0">Forum</a>
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-3" class="nav-link theme-sensitive" href="forum.html" tabindex="0">Forum</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="menu-item-4" class="nav-link" href="news.html" tabindex="0">News</a>
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-4" class="nav-link theme-sensitive" href="news.html" tabindex="0">News</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="menu-item-5" class="nav-link" href="aboutus.html" tabindex="0">About us</a>
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-5" class="nav-link theme-sensitive" href="aboutus.html" tabindex="0">About us</a>
                     </li>
                 </ul>
             </div>
@@ -62,8 +62,8 @@
                          class="spotlight-img">
 
                     <div class="spotlight-content">
-                        <h2>Trending now </h2>
-                        <h1>Reborn as a Vending Machine, <br>I Now Wander the Dungeon</h1>
+                        <h2 class="theme-sensitive">Trending now </h2>
+                        <h1 class="theme-sensitive">Reborn as a Vending Machine, <br>I Now Wander the Dungeon</h1>
                         <p>A vending machine fanatic meets his demise when he is, quite ironically, crushed by a vending
                             machine. He finds himself reincarnated as a vending machine in another world.</p>
 
@@ -78,92 +78,92 @@
 </div>
 
 <section class="popular">
-    <h2 class="section-title text-center" id="section-title" dark-mode>Most Popular</h2>
-    <div class="container">
-        <div id="sort-options" style="text-align: right;">
-            <span id="filter-popularity" class="sort-option">Sort by Popularity</span> |
-            <span id="filter-rating" class="sort-option">Sort by Rating</span>
+    <h2 class="section-title text-center" id="section-title">Most Popular</h2>
+    <div class="container theme-sensitive">
+        <div id="sort-options" style="text-align: right;" class="theme-sensitive">
+            <span id="filter-popularity" class="sort-option theme-sensitive">Sort by Popularity</span> |
+            <span id="filter-rating" class="sort-option theme-sensitive">Sort by Rating</span>
         </div>
-        <div class="row anime-grid" id="anime-grid">
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="9.56" data-popularity="1">
-                <a href="aot_watch.html" class='a'>
+        <div class="row anime-grid theme-sensitive" id="anime-grid">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="9.56" data-popularity="1">
+                <a href="aot_watch.html" class='a theme-sensitive'>
                     <img src="https://kuvernoori.github.io/Anime-site-test/aot.jpg" alt="Attack on Titan"
                          class="img-fluid">
-                    <p>Attack on Titan <br><span class="rating">9.56</span></p>
+                    <p class="theme-sensitive">Attack on Titan <br><span class="rating theme-sensitive">9.56</span></p>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="8.9" data-popularity="2">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="8.9" data-popularity="2">
                 <img src="https://kuvernoori.github.io/Anime-site-test/jojo.jpg" alt="JoJo's Bizarre Adventure"
                      class="img-fluid">
-                <p>JoJo's Bizarre Adventure <br><span class="rating">8.9</span></p>
+                <p>JoJo's Bizarre Adventure <br><span class="rating theme-sensitive">8.9</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="8.5" data-popularity="3">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="8.5" data-popularity="3">
                 <img src="https://kuvernoori.github.io/Anime-site-test/evang.jpg" alt="Neon Genesis Evangelion"
                      class="img-fluid">
-                <p>Neon Genesis Evangelion <br><span class="rating">8.5</span></p>
+                <p>Neon Genesis Evangelion <br><span class="rating theme-sensitive">8.5</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="8.4" data-popularity="4">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="8.4" data-popularity="4">
                 <img src="https://kuvernoori.github.io/Anime-site-test/death.jpeg" alt="Death Note" class="img-fluid">
-                <p>Death Note <br><span class="rating">8.4</span></p>
+                <p>Death Note <br><span class="rating theme-sensitive">8.4</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="8.95" data-popularity="5">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="8.95" data-popularity="5">
                 <img src="https://kuvernoori.github.io/Anime-site-test/naruto.jpg" alt="Naruto" class="img-fluid">
-                <p>Naruto <br><span class="rating">8.95</span></p>
+                <p>Naruto <br><span class="rating theme-sensitive">8.95</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="8.4" data-popularity="6">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="8.4" data-popularity="6">
                 <img src="https://kuvernoori.github.io/Anime-site-test/rez.jpg" alt="Re:Zero" class="img-fluid">
-                <p>Re:Zero <br><span class="rating">8.4</span></p>
+                <p>Re:Zero <br><span class="rating theme-sensitive">8.4</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="8.8" data-popularity="7">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="8.8" data-popularity="7">
                 <img src="https://kuvernoori.github.io/Anime-site-test/voice.jpeg" alt="A Silent Voice"
                      class="img-fluid">
-                <p>A Silent Voice <br><span class="rating">8.8</span></p>
+                <p>A Silent Voice <br><span class="rating theme-sensitive">8.8</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="9.33" data-popularity="8">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="9.33" data-popularity="8">
                 <img src="https://kuvernoori.github.io/Anime-site-test/berserk.jpg" alt="Berserk" class="img-fluid">
-                <p>Berserk <br><span class="rating">9.33</span></p>
+                <p>Berserk <br><span class="rating theme-sensitive">9.33</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="8.3" data-popularity="9">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="8.3" data-popularity="9">
                 <img src="https://kuvernoori.github.io/Anime-site-test/horimiya.jpg" alt="Horimiya" class="img-fluid">
-                <p>Horimiya <br><span class="rating">8.3</span></p>
+                <p>Horimiya <br><span class="rating theme-sensitive">8.3</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="9.4" data-popularity="10">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="9.4" data-popularity="10">
                 <img src="https://kuvernoori.github.io/Anime-site-test/code.jpg" alt="Code Geass" class="img-fluid">
-                <p>Code Geass: Lelouch of the Rebellion <br><span class="rating">9.4</span></p>
+                <p>Code Geass: Lelouch of the Rebellion <br><span class="rating theme-sensitive">9.4</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="5.6" data-popularity="11">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="5.6" data-popularity="11">
                 <img src="https://kuvernoori.github.io/Anime-site-test/rock.jpg" alt="Bocchi the Rock!"
                      class="img-fluid">
-                <p>Bocchi the Rock! <br><span class="rating">5.6</span></p>
+                <p>Bocchi the Rock! <br><span class="rating theme-sensitive">5.6</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="6.15" data-popularity="12">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="6.15" data-popularity="12">
                 <img src="https://kuvernoori.github.io/Anime-site-test/stray-dogs.jpg" alt="Bungou Stray Dogs"
                      class="img-fluid">
-                <p>Bungou Stray Dogs <br><span class="rating">6.15</span></p>
+                <p>Bungou Stray Dogs <br><span class="rating theme-sensitive">6.15</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="9.11" data-popularity="13">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="9.11" data-popularity="13">
                 <img src="https://kuvernoori.github.io/Anime-site-test/onepiece.jpg" alt="One Piece" class="img-fluid">
-                <p>One Piece <br><span class="rating">9.11</span></p>
+                <p>One Piece <br><span class="rating theme-sensitive">9.11</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="7.01" data-popularity="14">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="7.01" data-popularity="14">
                 <img src="https://kuvernoori.github.io/Anime-site-test/spice.jpg" alt="Spice and Wolf"
                      class="img-fluid">
-                <p>Spice and Wolf <br><span class="rating">7.01</span></p>
+                <p>Spice and Wolf <br><span class="rating theme-sensitive">7.01</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="8.4" data-popularity="15">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="8.4" data-popularity="15">
                 <img src="https://kuvernoori.github.io/Anime-site-test/kaguyaposter.jpg" alt="Kaguya-sama: Love Is War"
                      class="img-fluid">
-                <p>Kaguya-sama: Love Is War <br><span class="rating">8.4</span></p>
+                <p>Kaguya-sama: Love Is War <br><span class="rating theme-sensitive">8.4</span></p>
             </div>
-            <div class="col-md-3 col-sm-6 anime-item mb-4" data-rating="7.0" data-popularity="16">
+            <div class="col-md-3 col-sm-6 anime-item mb-4 theme-sensitive" data-rating="7.0" data-popularity="16">
                 <img src="https://kuvernoori.github.io/Anime-site-test/oregairu.jpg" alt="Oregairu" class="img-fluid">
-                <p>Oregairu <br><span class="rating">7.0</span></p>
+                <p>Oregairu <br><span class="rating theme-sensitive">7.0</span></p>
             </div>
         </div>
     </div>
 </section>
 
-<footer class="footer">
+<footer class="footer theme-sensitive">
     <p><i>Astana IT University || SE-2329</i></p>
     <p>Sanzhar Berkamalov | Arsen Tinalin | Altair Aitymov</p>
 </footer>
