--- a/tierlist.html
+++ b/tierlist.html
@@ -8,51 +8,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="tier_styles.css">
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="theme-sensitive">
         <nav class="navbar navbar-expand-lg bg-body-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="withlogout.html">WaifuSpot</a>
+                <a class="navbar-brand theme-sensitive" href="withlogout.html">WaifuSpot</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav" id="menu">
-                        <li class="nav-item">
-                            <a id="menu-item-1" class="nav-link" href="tierlist.html" tabindex="0">Popularity list</a>
+                    <ul class="navbar-nav theme-sensitive" id="menu">
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-1" class="nav-link theme-sensitive" href="tierlist.html" tabindex="0">Popularity list</a>
                         </li>
-                        <li class="nav-item">
-                            <a id="menu-item-2" class="nav-link" href="manga.html" tabindex="0">Manga</a>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-2" class="nav-link theme-sensitive" href="manga.html" tabindex="0">Manga</a>
                         </li>
-                        <li class="nav-item">
-                            <a id="menu-item-3" class="nav-link" href="forum.html" tabindex="0">Forum</a>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-3" class="nav-link theme-sensitive" href="forum.html" tabindex="0">Forum</a>
                         </li>
-                        <li class="nav-item">
-                            <a id="menu-item-4" class="nav-link" href="news.html" tabindex="0">News</a>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-4" class="nav-link theme-sensitive" href="news.html" tabindex="0">News</a>
                         </li>
-                        <li class="nav-item">
-                            <a id="menu-item-5" class="nav-link" href="aboutus.html" tabindex="0">About us</a>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-5" class="nav-link theme-sensitive" href="aboutus.html" tabindex="0">About us</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-    </div>
-</div>
-<button class="btn btn-outline-light" id="toggleThemeButton">Theme switcher</button>
-<div class="user-options">
-    <div id="auth-buttons">
-        <a href="signup.html" class="btn btn-outline-light" id="signUpButton">Sign Up</a>
-        <a href="signin.html" class="btn btn-outline-light" id="logInButton">Log In</a>
+        <button class="btn btn-outline-light" id="toggleThemeButton">Theme switcher</button>
+        <div class="user-options">
+            <div id="auth-buttons">
+                <a href="signup.html" class="btn btn-outline-light" id="signUpButton">Sign Up</a>
+                <a href="signin.html" class="btn btn-outline-light" id="logInButton">Log In</a>
+                </div>
         </div>
-</div>
-    <div id="logout-button" style="display: none;">
-        <a href="index.html" class="btn btn-outline-light" id="logOutButton">Log Out</a>
-    </div>
-</div>
+        <div id="personal-account-button" style="display: block;">
+            <a href="user.html" class="btn btn-outline-light" id="personalAccountButton">Personal Account</a>
+        </div>
+            <div id="logout-button" style="display: none;">
+                <a href="index.html" class="btn btn-outline-light" id="logOutButton">Log Out</a>
+            </div>
+           
     </header>
 
 <div id="carouselExampleCaptions" class="carousel slide">
@@ -100,14 +100,15 @@
 </div>
 
 
-<div class="title"><h1>The most popular female anime characters according to moviegoers</h1></div>
+<div class="title"><h1 class="theme-sensitive">The most popular female anime characters according to moviegoers</h1>
+</div>
 
 
-<div class="anime-card">
-    <div class="number-circle">
-        <span>1</span>
+<div class="anime-card theme-sensitive">
+    <div class="number-circle theme-sensitive">
+        <span class="theme-sensitive">1</span>
     </div>
-    <h2>Holo (ホロ) - Spice and Wolf.</h2>
+    <h2 class="theme-sensitive">Holo (ホロ) - Spice and Wolf.</h2>
     <img src="https://kuvernoori.github.io/Anime-site-test/holo.jpg"
          alt="Holo, also known as the 'Wise Wolf of Yoitsu,' is a character from the anime and light novel series Spice and Wolf">
     <p>
@@ -119,11 +120,11 @@
 </div>
 
 
-<div class="anime-card">
-    <div class="number-circle">
-        <span>2</span>
+<div class="anime-card theme-sensitive">
+    <div class="number-circle theme-sensitive">
+        <span class="theme-sensitive">2</span>
     </div>
-    <h2>Touka Kirishima (霧嶋 董香) - Tokyo Ghoul.</h2>
+    <h2 class="theme-sensitive">Touka Kirishima (霧嶋 董香) - Tokyo Ghoul.</h2>
     <img src="https://i.pinimg.com/originals/98/57/d1/9857d13f97b6432123952a908f3a4f58.jpg"
          alt="Touka Kirishima is a character from the anime and manga series Tokyo Ghoul">
     <p>
@@ -133,11 +134,11 @@
     </p>
 </div>
 
-<div class="anime-card">
-    <div class="number-circle">
-        <span>3</span>
+<div class="anime-card theme-sensitive">
+    <div class="number-circle theme-sensitive">
+        <span class="theme-sensitive">3</span>
     </div>
-    <h2>Yukino Yukinoshita (雪ノ下 雪乃) - Oregairu.</h2>
+    <h2 class="theme-sensitive">Yukino Yukinoshita (雪ノ下 雪乃) - Oregairu.</h2>
     <img src="https://kuvernoori.github.io/Anime-site-test/yukino.jpg"
          alt="Yukino Yukinoshita is a character from the anime and light novel series My Teen Romantic Comedy SNAFU">
     <p>
@@ -147,11 +148,11 @@
     </p>
 </div>
 
-<div class="anime-card">
-    <div class="number-circle">
-        <span>4</span>
+<div class="anime-card theme-sensitive">
+    <div class="number-circle theme-sensitive">
+        <span class="theme-sensitive">4</span>
     </div>
-    <h2>Kaguya Shinomiya (四宮しのみや かぐや) - Love is war.</h2>
+    <h2 class="theme-sensitive">Kaguya Shinomiya (四宮しのみや かぐや) - Love is war.</h2>
     <img src="https://kuvernoori.github.io/Anime-site-test/kaguya.jpg"
          alt="Kaguya Shinomiya is a character from the manga and anime series Kaguya-sama: Love is War">
     <p>
@@ -161,11 +162,11 @@
     </p>
 </div>
 
-<div class="anime-card">
-    <div class="number-circle">
-        <span>5</span>
+<div class="anime-card theme-sensitive">
+    <div class="number-circle theme-sensitive">
+        <span class="theme-sensitive">5</span>
     </div>
-    <h2>Krul Tepes (クルル・ツェペシ) - Owari no Seraph.</h2>
+    <h2 class="theme-sensitive">Krul Tepes (クルル・ツェペシ) - Owari no Seraph.</h2>
     <img src="https://kuvernoori.github.io/Anime-site-test/krul.jpg"
          alt="Krul Tepes is a character from the anime and light novel series Owari no Seraph">
     <p>
@@ -176,11 +177,11 @@
 </div>
 
 
-<div class="anime-card">
-    <div class="number-circle">
-        <span>6</span>
+<div class="anime-card theme-sensitive">
+    <div class="number-circle theme-sensitive">
+        <span class="theme-sensitive">6</span>
     </div>
-    <h2>Emilia (エミリア) - Re:Zero.</h2>
+    <h2 class="theme-sensitive">Emilia (エミリア) - Re:Zero.</h2>
     <img src="https://kuvernoori.github.io/Anime-site-test/emilia.jpg" alt="Emilia is a character from the anime and light novel series Re
 - Starting Life in Another World ">
     <p>
@@ -190,11 +191,11 @@
     </p>
 </div>
 
-<div class="anime-card">
-    <div class="number-circle">
-        <span>7</span>
+<div class="anime-card theme-sensitive">
+    <div class="number-circle theme-sensitive">
+        <span class="theme-sensitive">7</span>
     </div>
-    <h2>Kyouko Hori (堀 京子) - Horimiya.</h2>
+    <h2 class="theme-sensitive">Kyouko Hori (堀 京子) - Horimiya.</h2>
     <img src="https://kuvernoori.github.io/Anime-site-test/hori.jpg"
          alt="Kyouko Hori is a character from the anime and manga series 'Hori-san to Miyamura-kun'">
     <p>
@@ -204,11 +205,11 @@
     </p>
 </div>
 
-<div class="anime-card">
-    <div class="number-circle">
-        <span>8</span>
+<div class="anime-card theme-sensitive">
+    <div class="number-circle theme-sensitive">
+        <span class="theme-sensitive">8</span>
     </div>
-    <h2>Hiyori Shiina (椎しい名な ひより) - Classroom of the Elite.</h2>
+    <h2 class="theme-sensitive">Hiyori Shiina (椎しい名な ひより) - Classroom of the Elite.</h2>
     <img src="https://kuvernoori.github.io/Anime-site-test/hiyori.jpg"
          alt="Hiyori Shiina is a character from the anime and manga series 'The Irregular at Magic High School' (Mahouka Koukou no Rettousei)">
     <p>
@@ -219,7 +220,7 @@
     </p>
 </div>
 
-<footer>
+<footer class="theme-sensitive">
     <p><i>Astana IT University || SE-2329</i></p>
     <p>Sanzhar Berkamalov | Arsen Tinalin | Altair Aitymov</p>
 </footer>
