--- a/aboutus.html
+++ b/aboutus.html
@@ -10,30 +10,30 @@
 </head>
 <body>
 
-<header>
+<header class="theme-sensitive">
     <nav class="navbar navbar-expand-lg bg-body-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="withlogout.html">WaifuSpot</a>
+            <a class="navbar-brand theme-sensitive" href="withlogout.html">WaifuSpot</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav" id="menu">
-                    <li class="nav-item">
-                        <a id="menu-item-1" class="nav-link" href="tierlist.html" tabindex="0">Popularity list</a>
+                <ul class="navbar-nav theme-sensitive" id="menu">
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-1" class="nav-link theme-sensitive" href="tierlist.html" tabindex="0">Popularity list</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="menu-item-2" class="nav-link" href="manga.html" tabindex="0">Manga</a>
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-2" class="nav-link theme-sensitive" href="manga.html" tabindex="0">Manga</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="menu-item-3" class="nav-link" href="forum.html" tabindex="0">Forum</a>
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-3" class="nav-link theme-sensitive" href="forum.html" tabindex="0">Forum</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="menu-item-4" class="nav-link" href="news.html" tabindex="0">News</a>
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-4" class="nav-link theme-sensitive" href="news.html" tabindex="0">News</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="menu-item-5" class="nav-link" href="aboutus.html" tabindex="0">About us</a>
+                    <li class="nav-item theme-sensitive">
+                        <a id="menu-item-5" class="nav-link theme-sensitive" href="aboutus.html" tabindex="0">About us</a>
                     </li>
                 </ul>
             </div>
@@ -46,34 +46,37 @@
             <a href="signin.html" class="btn btn-outline-light" id="logInButton">Log In</a>
             </div>
     </div>
+    <div id="personal-account-button" style="display: block;">
+        <a href="user.html" class="btn btn-outline-light" id="personalAccountButton">Personal Account</a>
+    </div>
         <div id="logout-button" style="display: none;">
             <a href="index.html" class="btn btn-outline-light" id="logOutButton">Log Out</a>
         </div>
-    </div>
+       
 </header>
 
 <div class="main-content">
     <section class="about">
-        <h1>About Us</h1>
+        <h1 class="theme-sensitive">About Us</h1>
         <div class="about-content">
             <img src="https://kuvernoori.github.io/Anime-site-test/about.jpg" alt="About Us" class="about-image">
             <div class="about-text">
-                <h2>Welcome to WaifuSpot</h2>
+                <h2 class="theme-sensitive">Welcome to WaifuSpot</h2>
                 <p>At WaifuSpot, we're dedicated to bringing you the latest and greatest in anime and manga. Our mission
                     is to provide fans with a comprehensive platform where they can discover, discuss, and enjoy their
                     favorite anime series and manga. Whether you're looking for the latest news, engaging in community
                     discussions, or exploring our tier lists and recommendations, we're here to enhance your anime
                     experience.</p>
 
-                <h2>Our Team</h2>
+                <h2 class="theme-sensitive">Our Team</h2>
                 <p>Our team is passionate about anime and committed to delivering high-quality content and features.
                     We're a group of anime enthusiasts, writers, and developers working together to create an engaging
                     and user-friendly platform. We value your feedback and are always looking for ways to improve and
                     grow our community.</p>
 
-                <h2>Contact Us</h2>
+                <h2 class="theme-sensitive">Contact Us</h2>
                 <p>If you have any questions, suggestions, or just want to reach out, feel free to contact us at
-                    <button id="contactBtn">Click</button>
+                    <button id="contactBtn" class="theme-sensitive">Click</button>
                     <br>We’d love to hear from you!
                 </p>
             </div>
@@ -81,11 +84,11 @@
     </section>
 </div>
 
-<h1 class="questi">Frequently Asked Questions</h1>
+<h1 class="questi theme-sensitive">Frequently Asked Questions</h1>
 <div class="accordion">
     <div class="accordion-item">
         <h2 class="accordion-header">
-            <button class="accordion-button" data-target="#collapseOne">
+            <button class="accordion-button theme-sensitive" data-target="#collapseOne">
                 How can I contact customer support?
             </button>
         </h2>
@@ -98,7 +101,7 @@
     </div>
     <div class="accordion-item">
         <h2 class="accordion-header">
-            <button class="accordion-button" data-target="#collapseTwo">
+            <button class="accordion-button theme-sensitive" data-target="#collapseTwo">
                 How can I subscribe to your newsletter?
             </button>
         </h2>
@@ -109,14 +112,14 @@
             </div>
         </div>
     </div>
-    <div class="accordion-item">
+    <div class="accordion-item theme-sensitive">
         <h2 class="accordion-header">
-            <button class="accordion-button" data-target="#collapseThree">
+            <button class="accordion-button theme-sensitive" data-target="#collapseThree">
                 How can I reset my password?
             </button>
         </h2>
-        <div id="collapseThree" class="accordion-collapse">
-            <div class="accordion-body">
+        <div id="collapseThree" class="accordion-collapse theme-sensitive">
+            <div class="accordion-body theme-sensitive">
                 To reset your password, click on the "Forgot Password?" link on the login page. You will be prompted to
                 enter your email address, and you will receive instructions for resetting your password in your inbox.
             </div>
@@ -126,21 +129,21 @@
 
 
 <div id="contactForm" class="popup-form">
-    <div class="popup-content">
+    <div class="popup-content theme-sensitive">
         <span class="close-btn">✖</span>
         <h2>Contact Us</h2>
         <form>
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" id="name" class="form-control" placeholder="Enter your name" required>
+                <input type="text" id="name" class="form-control theme-sensitive" placeholder="Enter your name" required>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+                <input type="email" id="email" class="form-control theme-sensitive" placeholder="Enter your email" required>
             </div>
             <div class="mb-3">
                 <label for="message" class="form-label">Message</label>
-                <textarea id="message" class="form-control" rows="4" placeholder="Write your message"
+                <textarea id="message" class="form-control theme-sensitive" rows="4" placeholder="Write your message"
                           required></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Send</button>
@@ -149,7 +152,7 @@
 </div>
 
 
-<footer>
+<footer class="theme-sensitive">
     <p><i>Astana IT University || SE-2329</i></p>
     <p>Sanzhar Berkamalov | Arsen Tinalin | Altair Aitymov</p>
 </footer>
@@ -159,6 +162,7 @@
 <script src="keyboard-navigation.js"></script>
 <script src="loggeduser.js"></script>
 <script src="change.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
