--- a/forum.html
+++ b/forum.html
@@ -7,64 +7,63 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="forum_style.css">
-    <link rel="stylesheet" href="tier_styles.css">
-</head>
+    <header class="theme-sensitive">
+        <nav class="navbar navbar-expand-lg bg-body-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand theme-sensitive" href="withlogout.html">WaifuSpot</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav theme-sensitive" id="menu">
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-1" class="nav-link theme-sensitive" href="tierlist.html" tabindex="0">Popularity list</a>
+                        </li>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-2" class="nav-link theme-sensitive" href="manga.html" tabindex="0">Manga</a>
+                        </li>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-3" class="nav-link theme-sensitive" href="forum.html" tabindex="0">Forum</a>
+                        </li>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-4" class="nav-link theme-sensitive" href="news.html" tabindex="0">News</a>
+                        </li>
+                        <li class="nav-item theme-sensitive">
+                            <a id="menu-item-5" class="nav-link theme-sensitive" href="aboutus.html" tabindex="0">About us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <button class="btn btn-outline-light" id="toggleThemeButton">Theme switcher</button>
+        <div class="user-options">
+            <div id="auth-buttons">
+                <a href="signup.html" class="btn btn-outline-light" id="signUpButton">Sign Up</a>
+                <a href="signin.html" class="btn btn-outline-light" id="logInButton">Log In</a>
+                </div>
+        </div>
+        <div id="personal-account-button" style="display: block;">
+            <a href="user.html" class="btn btn-outline-light" id="personalAccountButton">Personal Account</a>
+        </div>
+            <div id="logout-button" style="display: none;">
+                <a href="index.html" class="btn btn-outline-light" id="logOutButton">Log Out</a>
+            </div>
+           
+    </header>
+
 <body>
-<script src="index.js"></script>
-<header>
-    <nav class="navbar navbar-expand-lg bg-body-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="withlogout.html">WaifuSpot</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav" id="menu">
-                    <li class="nav-item">
-                        <a id="menu-item-1" class="nav-link" href="tierlist.html" tabindex="0">Popularity list</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-item-2" class="nav-link" href="manga.html" tabindex="0">Manga</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-item-3" class="nav-link" href="forum.html" tabindex="0">Forum</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-item-4" class="nav-link" href="news.html" tabindex="0">News</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-item-5" class="nav-link" href="aboutus.html" tabindex="0">About us</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <button class="btn btn-outline-light" id="toggleThemeButton">Theme switcher</button>
-    <div class="user-options">
-        <div id="auth-buttons">
-            <a href="signup.html" class="btn btn-outline-light" id="signUpButton">Sign Up</a>
-            <a href="signin.html" class="btn btn-outline-light" id="logInButton">Log In</a>
-            </div>
-    </div>
-        <div id="logout-button" style="display: none;">
-            <a href="index.html" class="btn btn-outline-light" id="logOutButton">Log Out</a>
-        </div>
-    </div>
-</header>
+<main class="theme-sensitive">
+    <section id="recent-discussions" class="theme-sensitive">
+        <h2 class="theme-sensitive">Recent Discussions</h2>
 
-
-<main>
-    <section id="recent-discussions">
-        <h2>Recent Discussions</h2>
-
-        <article class="discussion">
+        <article class="discussion theme-sensitive">
             <div class="discussion-header">
-                <h3>New Anime Season</h3>
+                <h3 class="theme-sensitive">New Anime Season</h3>
                 <button class="like-button">❤️ <span>0</span></button>
             </div>
-            <p>Discussion about the upcoming anime season and top recommendations...</p>
-            <a href="#" class="toggle-comments">Show Comments (2)</a>
+            <p class="theme-sensitive">Discussion about the upcoming anime season and top recommendations...</p>
+            <a href="#" class="toggle-comments theme-sensitive">Show Comments (2)</a>
             <div class="comments">
                 <h4>Comments</h4>
                 <ul>
@@ -76,13 +75,13 @@
             </div>
         </article>
 
-        <article class="discussion">
+        <article class="discussion theme-sensitive">
             <div class="discussion-header">
-                <h3>Best Anime of 2024</h3>
+                <h3 class="theme-sensitive">Best Anime of 2024</h3>
                 <button class="like-button">❤️ <span>0</span></button>
             </div>
-            <p>Which anime should be crowned the best of 2024? Share your thoughts...</p>
-            <a href="#" class="toggle-comments">Show Comments (3)</a>
+            <p class="theme-sensitive">Which anime should be crowned the best of 2024? Share your thoughts...</p>
+            <a href="#" class="toggle-comments theme-sensitive">Show Comments (3)</a>
             <div class="comments">
                 <h4>Comments</h4>
                 <ul>
@@ -95,13 +94,13 @@
             </div>
         </article>
 
-        <article class="discussion">
+        <article class="discussion theme-sensitive">
             <div class="discussion-header">
-                <h3>Favorite Characters of All Time</h3>
+                <h3 class="theme-sensitive">Favorite Characters of All Time</h3>
                 <button class="like-button">❤️ <span>0</span></button>
             </div>
-            <p>Who are your top anime characters of all time and why? Let's discuss...</p>
-            <a href="#" class="toggle-comments">Show Comments (1)</a>
+            <p class="theme-sensitive">Who are your top anime characters of all time and why? Let's discuss...</p>
+            <a href="#" class="toggle-comments theme-sensitive">Show Comments (1)</a>
             <div class="comments">
                 <h4>Comments</h4>
                 <ul>
@@ -112,34 +111,36 @@
             </div>
         </article>
     </section>
-
-    <section id="contact">
-        <h2>Contact Administration</h2>
-        <form id="contactForm" method="post" novalidate>
-            <label for="name">Your Name:</label><br>
-            <input type="text" id="name" name="name" required><br>
-
-            <label for="email">Your Email:</label><br>
-            <input type="email" id="email" name="email" required><br>
-
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="4" required></textarea><br>
-
-            <button type="submit">Send</button>
-        </form>
-    </section>
 </main>
-<div class="title">
-    <h1 style="color:#B0B7FF;">Current time</h1>
-    <div id="time"></div>
-    <div id="date"></div>
-</div>
-<footer>
-    <p>&copy; 2024 Anime Forum. All rights reserved.</p>
-    <p><i>Astana IT University || SE-2329</i></p>
-    <p>Sanzhar Berkamalov | Arsen Tinalin | Altair Aitymov</p>
-</footer>
 
+<section id="contact" class="theme-sensitive">
+    <h2 class="theme-sensitive">Contact Administration</h2>
+    <form id="contactForm" method="post" novalidate>
+        <label for="name">Your Name:</label><br>
+        <input type="text" id="name" class="theme-sensitive" name="name" required><br>
+
+        <label for="email">Your Email:</label><br>
+        <input type="email" id="email" class="theme-sensitive" name="email" required><br>
+
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="4" class="theme-sensitive" required></textarea><br>
+
+        <button type="submit" class="theme-sensitive">Send</button>
+    </form>
+</section>
+
+<div class="title theme-sensitive">
+    <h1 class="theme-sensitive">Current time</h1>
+    <div id="time" class="theme-sensitive"></div>
+    <div id="date" class="theme-sensitive"></div>
+    <footer class="theme-sensitive">
+        <p>&copy; 2024 Anime Forum. All rights reserved.</p>
+        <p><i>Astana IT University || SE-2329</i></p>
+        <p>Sanzhar Berkamalov | Arsen Tinalin | Altair Aitymov</p>
+    </footer>
+</div>
+
+<script src="index.js"></script>
 <script src="change.js"></script>
 <script src="loggeduser.js"></script>
 <script src="keyboard-navigation.js"></script>
